--- a/src/components/AsideMenuCard.astro
+++ b/src/components/AsideMenuCard.astro
@@ -14,7 +14,7 @@ const artistsString = artists.join(", ");
 <li>
   <a
     href={`/playlist/${id}`}
-    class="flex items-center gap-3 overflow-hidden relative p-2 rounded-md hover:bg-[#1a1a1a]"
+    class="flex items-center gap-3 overflow-hidden p-2 rounded-md hover:bg-[#1a1a1a]"
   >
     <picture class="h-12 w-12 flex-none">
       <img
@@ -24,7 +24,7 @@ const artistsString = artists.join(", ");
       />
     </picture>
 
-    <div class="flex flex-auto flex-col">
+    <div class="flex flex-col overflow-hidden">
       <h4 class="truncate">
         {title}
       </h4>
