--- a/src/components/AsideMenu.astro
+++ b/src/components/AsideMenu.astro
@@ -1,11 +1,11 @@
 ---
-import AsideMenuItem from "@/components/AsideMenuItem.astro";
-import AsideMenuCard from "@/components/AsideMenuCard.astro";
-import HomeIcon from "@/icons/Home.astro";
-import LibraryIcon from "@/icons/Library.astro";
-import SearchIcon from "@/icons/Search.astro";
+import AsideMenuItem from "./AsideMenuItem.astro";
+import AsideMenuCard from "./AsideMenuCard.astro";
+import HomeIcon from "../icons/Home.astro";
+import LibraryIcon from "../icons/Library.astro";
+import SearchIcon from "../icons/Search.astro";
 
-import { sidebarPlaylists } from "@/lib/data";
+import { sidebarPlaylists } from "../lib/data";
 ---
 
 <aside class="hidden lg:flex relative overflow-hidden">
