--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import GreetingTitle from "@/components/GreetingTitle.svelte";
-import Layout from "@/layouts/Layout.astro";
-import CardHorizontal from "@/components/CardHorizontal.astro";
-import Card from "@/components/Card.astro";
-import { playlists, morePlaylists } from "@/lib/data";
+import GreetingTitle from "../components/GreetingTitle.svelte";
+import Layout from "../layouts/Layout.astro";
+import CardHorizontal from "../components/CardHorizontal.astro";
+import Card from "../components/Card.astro";
+import { playlists, morePlaylists } from "../lib/data";
 ---
 
 <Layout title="Spotify Clone">
